k8s/postgres-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: emt-project
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
