k8s/react-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: emt-project
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
  selector:
    app: react-frontend
