k8s/spring-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: emt-project
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: backend
